# isildurs_bane

cargo_project/: Cargo.toml
cargo_workspace/: Cargo.toml
cargo_workspace/workspace_member/: Cargo.toml
dotnet_workspace/: dotnet_workspace.csproj  dotnet_workspace.sln
dotnet_workspace/workspace_member/: Class1.cs
gem_project/: Gemfile
go_project/: go.mod
go_workspace/: go.mod  go.work  go.work.sum  go_workspace.go
go_workspace/workspace_member/: go.mod  workspace_member.go
gradle_project/: build.gradle.kts  gradle.lockfile  settings.gradle.kts
gradle_workspace/: settings.gradle.kts
gradle_workspace/workspace_member/: build.gradle.kts  gradle.lockfile  settings.gradle.kts
maven_project/: pom.xml
maven_project/src/main/java/io/phylum/: App.java
maven_workspace/: pom.xml
maven_workspace/src/test/java/io/phylum/: AppTest.java
maven_workspace/workspace_member/: pom.xml
npm_project/: package-lock.json  package.json
npm_workspace/: package-lock.json  package.json
npm_workspace/projects/workspace_member/: package.json
pnpm_project/: package.json
pnpm_workspace/: package-lock.json  package.json  pnpm-lock.yaml
pnpm_workspace/projects/workspace_member/: package.json
poetry_project/: pyproject.toml
yarn_project/: README.md  package.json
yarn_workspace/: README.md  package.json
yarn_workspace/projects/workspace_member/: README.md  package.json
