[tool.poetry]
name = "poetry-project"
version = "0.1.0"
description = ""
authors = ["Christian Duerr <chris.durr@phylum.io>"]
readme = "README.md"
packages = [{include = "poetry_project"}]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
